[gd_scene load_steps=20 format=3 uid="uid://cuacqfa3rxn6x"]

[ext_resource type="Script" path="res://Scenes/Levels/level_00.gd" id="1_cveox"]
[ext_resource type="PackedScene" uid="uid://6pbl2bkuefml" path="res://Scenes/Actors/Player/player.tscn" id="1_ga7ey"]
[ext_resource type="Texture2D" uid="uid://dxjaur7tcf4e0" path="res://Assets/img/Tileset/tile_02_dirt.png" id="1_n2r27"]
[ext_resource type="Texture2D" uid="uid://baeshuybs8koi" path="res://Assets/img/Tileset/tile_02_water_ver2.png" id="2_fj1o1"]
[ext_resource type="Texture2D" uid="uid://d034cg3j635iw" path="res://Assets/img/Tileset/tile_02_waves.png" id="3_8bwgu"]
[ext_resource type="Texture2D" uid="uid://c62u5cjx3pvqj" path="res://Assets/img/Tileset/sakura trees-Sheet.png" id="3_lm3x1"]
[ext_resource type="Texture2D" uid="uid://ch243t07seyv0" path="res://Assets/img/Tileset/trees-Sheet.png" id="4_5jmpg"]
[ext_resource type="PackedScene" uid="uid://tm60h4s7wtjt" path="res://Scenes/props/finish_line.tscn" id="7_p8jcf"]
[ext_resource type="PackedScene" uid="uid://crm3cs6ku3tes" path="res://Scenes/UI/hud.tscn" id="10_irlx7"]
[ext_resource type="PackedScene" uid="uid://bf17e771elgay" path="res://Scenes/UI/game_over_window.tscn" id="11_7x712"]
[ext_resource type="FontFile" uid="uid://bbpwmmscgirn" path="res://Assets/fonts/RonysiswadiArchitect4-qZmp2.ttf" id="12_1n07w"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tpt60"]
texture = ExtResource("1_n2r27")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 12, 12, 12, 12, 32, -32, 32)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 12, -32, 12)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 32, 32, -12, 32, -12, 12, -32, 12, -32, -32)
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, 32, -12, 32, -12, -12, 32, -12)
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, 32, -32, -12, 12, -12, 12, 32)
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
8:0/0 = 0
8:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:0/0/physics_layer_0/angular_velocity = 0.0
9:0/0 = 0
9:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, 32, -32, -32, 12, -32, 12, 32)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 32, 32, -12, 32, -12, -32)
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 32, 12, -12, 12, -12, -32)
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 12, -32, 12, 12, -32, 12)
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
7:1/0 = 0
7:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:1/0/physics_layer_0/angular_velocity = 0.0
8:1/0 = 0
8:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:1/0/physics_layer_0/angular_velocity = 0.0
9:1/0 = 0
9:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, 32, -32, -32, 12, -32, 12, -12, 32, -12, 32, 32)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, 32, -32, 32, -32, -12, 32, -12)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, 32, -32, 32, -32, -12, -12, -12, -12, -32, 32, -32)
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 32, 32, -32, 32, -32, -32)
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
6:2/0 = 0
6:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_0/angular_velocity = 0.0
7:2/0 = 0
7:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:2/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yw2sx"]
texture = ExtResource("3_lm3x1")
texture_region_size = Vector2i(64, 64)
0:0/animation_frame_0/duration = 1.0
0:0/animation_frame_1/duration = 1.0
0:0/animation_frame_2/duration = 1.0
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_a0k0c"]
texture = ExtResource("4_5jmpg")
texture_region_size = Vector2i(64, 64)
0:0/animation_frame_0/duration = 1.0
0:0/animation_frame_1/duration = 1.0
0:0/animation_frame_2/duration = 1.0
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_koxum"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 14
sources/0 = SubResource("TileSetAtlasSource_tpt60")
sources/1 = SubResource("TileSetAtlasSource_yw2sx")
sources/2 = SubResource("TileSetAtlasSource_a0k0c")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_g77ik"]
texture = ExtResource("2_fj1o1")
texture_region_size = Vector2i(64, 64)
0:0/animation_frame_0/duration = 0.7
0:0/animation_frame_1/duration = 0.7
0:0/animation_frame_2/duration = 0.7
0:0/0 = 0
0:1/animation_frame_0/duration = 0.7
0:1/animation_frame_1/duration = 0.7
0:1/animation_frame_2/duration = 0.7
0:1/0 = 0
0:2/animation_frame_0/duration = 0.7
0:2/animation_frame_1/duration = 0.7
0:2/animation_frame_2/duration = 0.7
0:2/0 = 0
0:3/animation_frame_0/duration = 0.7
0:3/animation_frame_1/duration = 0.7
0:3/animation_frame_2/duration = 0.7
0:3/0 = 0
0:4/animation_frame_0/duration = 0.7
0:4/animation_frame_1/duration = 0.7
0:4/animation_frame_2/duration = 0.7
0:4/0 = 0
0:5/animation_frame_0/duration = 0.7
0:5/animation_frame_1/duration = 0.7
0:5/animation_frame_2/duration = 0.7
0:5/0 = 0
0:6/0 = 0
3:5/animation_frame_0/duration = 0.7
3:5/animation_frame_1/duration = 0.7
3:5/animation_frame_2/duration = 0.7
3:5/0 = 0
3:4/animation_frame_0/duration = 0.7
3:4/animation_frame_1/duration = 0.7
3:4/animation_frame_2/duration = 0.7
3:4/0 = 0
3:3/animation_frame_0/duration = 0.7
3:3/animation_frame_1/duration = 0.7
3:3/animation_frame_2/duration = 0.7
3:3/0 = 0
3:2/animation_frame_0/duration = 0.7
3:2/animation_frame_1/duration = 0.7
3:2/animation_frame_2/duration = 0.7
3:2/0 = 0
3:1/animation_frame_0/duration = 0.7
3:1/animation_frame_1/duration = 0.7
3:1/animation_frame_2/duration = 0.7
3:1/0 = 0
3:0/animation_frame_0/duration = 0.7
3:0/animation_frame_1/duration = 0.7
3:0/animation_frame_2/duration = 0.7
3:0/0 = 0

[sub_resource type="TileSet" id="TileSet_cv56x"]
tile_size = Vector2i(64, 64)
sources/2 = SubResource("TileSetAtlasSource_g77ik")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7cfjb"]
texture = ExtResource("3_8bwgu")
texture_region_size = Vector2i(64, 64)
0:0/size_in_atlas = Vector2i(2, 2)
0:0/0 = 0
0:2/size_in_atlas = Vector2i(2, 2)
0:2/0 = 0
0:4/size_in_atlas = Vector2i(2, 2)
0:4/0 = 0
0:6/size_in_atlas = Vector2i(2, 2)
0:6/0 = 0
6:0/size_in_atlas = Vector2i(2, 2)
6:0/0 = 0
6:2/size_in_atlas = Vector2i(2, 2)
6:2/0 = 0
6:4/size_in_atlas = Vector2i(2, 2)
6:4/0 = 0
6:6/size_in_atlas = Vector2i(2, 2)
6:6/0 = 0

[sub_resource type="TileSet" id="TileSet_c1ff6"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_7cfjb")

[node name="Level00" type="Node2D"]
script = ExtResource("1_cveox")
level_timer_duration = 301.0

[node name="Tiles" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="DirtTile" type="TileMap" parent="Tiles"]
tile_set = SubResource("TileSet_koxum")
format = 2
layer_0/name = "dirt"
layer_0/z_index = -3
layer_1/name = "trees"
layer_1/z_index = 4
layer_1/tile_data = PackedInt32Array()
metadata/_edit_lock_ = true

[node name="WaterTile" type="TileMap" parent="Tiles"]
tile_set = SubResource("TileSet_cv56x")
format = 2
layer_0/name = "water"
layer_0/z_index = 2
metadata/_edit_lock_ = true

[node name="WavesTile" type="TileMap" parent="Tiles"]
tile_set = SubResource("TileSet_c1ff6")
format = 2
metadata/_edit_lock_ = true

[node name="WorldBorders" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="StartBorder" type="StaticBody2D" parent="WorldBorders"]
collision_mask = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBorders/StartBorder"]

[node name="FinishBorder" type="StaticBody2D" parent="WorldBorders"]
collision_mask = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBorders/FinishBorder"]

[node name="EnemyBorder" type="StaticBody2D" parent="WorldBorders"]
collision_layer = 32
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBorders/EnemyBorder"]

[node name="Props" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Plants" type="Node2D" parent="Props"]
metadata/_edit_lock_ = true

[node name="LotusLeaf" type="Node2D" parent="Props/Plants"]
metadata/_edit_lock_ = true

[node name="LotusFlower" type="Node2D" parent="Props/Plants"]
metadata/_edit_lock_ = true

[node name="Rocks" type="Node2D" parent="Props"]
metadata/_edit_lock_ = true

[node name="FinishGoal" type="Node2D" parent="Props"]
metadata/_edit_lock_ = true

[node name="FinishLine" parent="Props/FinishGoal" instance=ExtResource("7_p8jcf")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(360, 352)
zoom = Vector2(1.5, 1.5)

[node name="UI" type="Node" parent="."]

[node name="Timer" type="CanvasLayer" parent="UI"]

[node name="Control" type="Control" parent="UI/Timer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TimerLabel" type="Label" parent="UI/Timer/Control"]
layout_mode = 0
offset_left = 1104.0
offset_top = 56.0
offset_right = 1225.0
offset_bottom = 97.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 6
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("12_1n07w")
theme_override_font_sizes/font_size = 36
text = "00 : 00"

[node name="HUD" parent="UI" instance=ExtResource("10_irlx7")]

[node name="GameOverWindow" parent="UI" instance=ExtResource("11_7x712")]

[node name="EntityContainer" type="Node2D" parent="." groups=["entity_container"]]
metadata/_edit_lock_ = true

[node name="Enemies" type="Node2D" parent="EntityContainer"]
metadata/_edit_lock_ = true

[node name="Player" parent="EntityContainer" instance=ExtResource("1_ga7ey")]
position = Vector2(360, 352)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="EntityContainer/Player"]
remote_path = NodePath("../../../Camera2D")

[connection signal="player_game_over" from="EntityContainer/Player" to="." method="_on_player_player_game_over"]
